--- a/package.json
+++ b/package.json
@@ -20,18 +20,16 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "@capacitor/app": "1.0.3",
-    "@capacitor/core": "3.2.2",
-    "@capacitor/haptics": "1.0.3",
-    "@capacitor/keyboard": "1.0.3",
+    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/onesignal": "^5.0.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage-angular": "^3.0.6",
-    "cordova-android": "9.1.0",
     "firebase": "^7.0 || ^8.0",
     "rxfire": "6.0.0-rc.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "onesignal-cordova-plugin": "2.4.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
@@ -43,13 +41,13 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.2.2",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cordova-android": "^9.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -75,6 +73,7 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
+      "onesignal-cordova-plugin": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
